--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
+  "name": "m-01back",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "homepage": "https://github.com/nicodsd/m-01back#readme",
+  "bugs": {
+    "url": "https://github.com/nicodsd/m-01back/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicodsd/m-01back.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node ./bin/www.js",
+    "dev": "nodemon ./bin/www.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "joi-oid": "^1.1.2",
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.1"
   }
 }
