--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   "scripts": {
     "start": "node ./bin/www.js",
     "dev": "nodemon ./bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data": "node ./models/data/data.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "joi": "^18.0.1",
     "joi-oid": "^1.1.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1"
   }
